[metadata]
name = miniciti-user
version = 0.1
author = Mirko Westermeier
author_email = mirko@westermeier.de
description = A miniciti user
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/memowe/miniciti-user
project_urls =
    Bug Tracker = https://github.com/memowe/miniciti-user/issues

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.8

[options.packages.find]
where = src

[aliases]
test = pytest
